Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Bakery - Bootstrap 5 HTML Cake Shop Template</title>
+	<meta name="google-site-verification" content="Wi_ykO4Zsy9c4yXyo2_ThLCHLDcGtF-6rUL4pwW-hk0" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
