--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-57WZTH8T');</script>
 	<!-- End Google Tag Manager -->
+
+	<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NS33MD7E0W"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NS33MD7E0W'); </script> "
+(string)
 </head>
 
 <body>
